--- a/views/include/shop/profile.ejs
+++ b/views/include/shop/profile.ejs
@@ -2,8 +2,9 @@
     <div class="row">
         <div class="card col-md-6 col-sm-12 mt-5">
             <img class="card-img-top" id="img" src="/images/background.jpg" alt="Card image" style="width:100%">
-            <div class="card-body">
-                <h4 id="name" class="card-title"></h4>
+            <div class="card-body justify-content-between">
+                <h4 id="name" class="card-title d-inline-block"></h4>
+                <button id="edit" class="btn btn-warning float-right" onclick="location.href='/shop/bussiness'">開始營業</button>
             </div>
         </div>
         <div class="card col-md-6 col-sm-12">
