--- a/views/include/user/profile.ejs
+++ b/views/include/user/profile.ejs
@@ -24,7 +24,7 @@
                         </div>
                         <input type="tel" id="phone" class="form-control" placeholder="行動電話號碼" name="phone" disabled>
                         <div class="valid-feedback">已驗證</div>
-                        <div class="invalid-feedback">尚未驗證</div>
+                        <div class="invalid-feedback"><a href="/auth/verify/phone">尚未驗證</a></div>
                     </div>
                     <div class="input-group mb-2">
                         <div class="input-group-prepend">
