--- a/views/include/user/profile.ejs
+++ b/views/include/user/profile.ejs
@@ -60,3 +60,100 @@
 </div>
 <script src="/js/fetch_request/profile.js"></script>
 <script src="/js/fetch_request/update.js"></script>
+<script>
+    var fname;
+    var fphone;
+    var fgender;
+    var fbirthday;
+
+    function editFn() {
+        document.getElementById('phone').disabled = false;
+        document.getElementById('gender').disabled = false;
+        document.getElementById('birthday').disabled = false;
+        document.getElementById('edit').classList.add('d-none');
+        document.getElementById('updata').classList.remove('d-none');
+        fname = document.getElementById('name').innerText;
+        fphone = document.getElementById('phone').value;
+        fgender = document.getElementById('gender').value;
+        fbirthday = document.getElementById('birthday').value;
+    }
+
+    function imeditFn() {
+        document.getElementById('phone').disabled = true;
+        document.getElementById('gender').disabled = true;
+        document.getElementById('birthday').disabled = true;
+        document.getElementById('edit').classList.remove('d-none');
+        document.getElementById('updata').classList.add('d-none');
+        document.getElementById('name').innerText = fname;
+        document.getElementById('phone').value = fphone;
+        document.getElementById('gender').value = fgender;
+        document.getElementById('birthday').value = fbirthday;
+        document.getElementById('submit').classList.remove('is-invalid');
+    }
+
+    document.getElementById("submit").addEventListener("click", (async function submitFn(e) {
+        e.preventDefault();
+        const putData = {
+            name: document.getElementById('name').innerText,
+            phone: document.getElementById('phone').value,
+            gender: document.getElementById('gender').value,
+            birthday: document.getElementById('birthday').value,
+        };
+        let change = 4;
+
+        if (putData.name === fname) change--;
+        if (putData.phone === fphone) change--;
+        if (putData.gender === fgender) change--;
+        if (putData.birthday === fbirthday) change--;
+        if (!change) return validFn('submit', false);
+
+        const result = await putMember(putData);
+        const data = JSON.parse(result);
+        if (data.code) window.location.href = '/auth';
+        else Swal.fire({
+            icon: 'error',
+            title: data.status,
+            text: data.result
+        });
+    }));
+
+    function checkInputFn(email, phone) {
+        const oemail = document.getElementById('email').value;
+        const ophone = document.getElementById('phone').value;
+        if (oemail) validFn('email', email);
+        if (ophone) validFn('phone', phone);
+    }
+
+    async function getInfoFn() {
+        let urlparm = window.location.href;
+        if (window.location.href.split('?')[1]) {
+            urlparm = window.location.href.split('?')[1];
+            if (urlparm.split('&')[0].split('=')[0] == "refresh_token")
+                if (urlparm.split('&')[0].split('=')[1] != "")
+                    localStorage.setItem('refresh_token', urlparm.split('&')[0].split('=')[1]);
+        }
+        const result = await getMember();
+        const data = JSON.parse(result);
+        if (!data.result.picture) {
+            let oimg;
+            if (data.result.gender === "男") oimg = random(1, 3);
+            else if (data.result.gender === "女") oimg = random(4, 6);
+            else oimg = random(1, 6);
+            document.getElementById('img').src = "https://www.w3schools.com/bootstrap4/img_avatar" + oimg + ".png";
+        } else document.getElementById('img').src = data.result.picture + "#" + new Date().getTime();
+        if (data.result.role) localStorage.setItem('role', JSON.stringify(data.result.role));
+        if (data.result.name) document.getElementById('name').innerText = data.result.name;
+        if (data.result.email) document.getElementById('email').value = data.result.email;
+        if (data.result.phone) document.getElementById('phone').value = data.result.phone;
+        if (data.result.gender) document.getElementById('gender').options[0].innerText = data.result.gender;
+        if (data.result.birthday) document.getElementById('birthday').value = data.result.birthday;
+        if (data.result.create) document.getElementById('create').innerText = "創建時間：" + data.result.create;
+        if (data.result.update) document.getElementById('update').innerText = "上次更新：" + data.result.update;
+        checkInputFn(data.result['verityCode'], data.result['phoneVerify']);
+    }
+    getInfoFn();
+
+    function random(min, max) {
+        return Math.floor(Math.random() * (max - min + 1)) + min;
+    };
+</script>
