--- a/views/include/storePage.ejs
+++ b/views/include/storePage.ejs
@@ -14,5 +14,26 @@
 </template>
 <script src="/js/fetch_request/storePage.js"></script>
 <script>
+    async function getProductFn(url) {
+        if (url) localStorage.setItem('url', url);
+
+        const result = await getStoreProduct();
+        const data = JSON.parse(result);
+        let products = document.getElementById('product');
+
+        while (products.hasChildNodes())
+            products.removeChild(products.lastChild);
+        let productList = document.getElementById('product');
+        for (let i = 0; i < data.result.length; i++) {
+            const product = data.result[i];
+            const newProduct = document.getElementById('productTemplate');
+            newProduct.content.querySelector('div > a > .card-footer > span:nth-child(1)').textContent = product.name;
+            newProduct.content.querySelector('div').id = product.id;
+            newProduct.content.querySelector('div > a > .card-footer > span:nth-child(2)').textContent = "NT$" + product.price;
+            newProduct.content.querySelector('div > a').href = `#${product.id}`;
+            const card = document.importNode(newProduct.content, true);
+            productList.appendChild(card);
+        }
+    }
     getProductFn();
 </script>
